--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
     <script>
         async function loadBooks() {
-            var url = "/data-api/rest/invoices?$first=5"
+            var url = "/data-api/rest/Invoices?$first=5"
             var response = await fetch(url) 
             var payload = await response.json();   
             return payload.value;
