--- a/index.html
+++ b/index.html
@@ -7,38 +7,67 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Data API Builder Demo</title>
-	<meta name="description" content="A simple Data API Builder Demo test">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">    </script>
+  <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+	
 </head>
 
 <body>
 	<div class="container">		
-		<h1>Invoices List</h1>		
-        <div id="#books">
-            <ul class="list-group">                
-            </ul>
-        </div>
-    </div>    
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
-    <script>
-        async function loadBooks() {
-            var url = "/data-api/rest/Invoices?$first=5"
-            var response = await fetch(url) 
-            var payload = await response.json();   
-            return payload.value;
-        }
+		<h2>Welcome to Data API Builder Demo</h2>
+		<p>Below are the invoice details</p>
+    </div> 
+<table id='mytable'>
+<tr>
+<th>Invoice Id</th>
+<th>Customer Id</th>
+<th>Invoice Date</th>
+<th>Billing City</th>
+<th>Billing Country</th>
+<th>Billing PostalCode</th>
+<th>Total</th>
+  </tr>
+<div>
+</div>
 
-        $(function() {
-            loadBooks().then(result => {                 
-                var ul = $("ul");
-                result.forEach(invoice => {
-                    var li = $(`<li class='list-group-item'>${invoice.InvoiceId},${invoice.InvoiceDate},${invoice.BillingCountry}</li>`);
-                    ul.append(li);
-                });
-            } );
-        });
-        
+  </table>	
+	<script>
+	$(document).ready(function(){
+var url  = "https://localhost:5001/rest/Invoices?$first=5";
+$.getJSON(url, function( data ) {
+	console.log(data);
+    var obj = data['value'];
+    for(var i=0;i<obj.length;i++)
+    {
+        var tr  ="<tr>"+
+                "<td>"+obj[i]["InvoiceId"]+"</td>"+
+                "<td>"+obj[i]["CustomerId"]+"</td>"+
+				"<td>"+obj[i]["InvoiceDate"]+"</td>"+
+                "<td>"+obj[i]["BillingCity"]+"</td>"+
+				"<td>"+obj[i]["BillingCountry"]+"</td>"+
+                "<td>"+obj[i]["BillingPostalCode"]+"</td>"+
+                "<td>"+obj[i]["Total"]+"</td></tr>";
+       $("#mytable").append(tr);
+    }
+});
+}); 
 	</script>
 </body>
 
