--- a/index.html
+++ b/index.html
@@ -7,70 +7,79 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Data API Builder Demo</title>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">    </script>
-  <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 	<div class="container">		
 		<h2>Welcome to Data API Builder Demo</h2>
-		<p>Below are the invoice details</p>
-    </div> 
-<table id='mytable'>
-<tr>
-<th>Invoice Id</th>
-<th>Customer Id</th>
-<th>Invoice Date</th>
-<th>Billing City</th>
-<th>Billing Country</th>
-<th>Billing PostalCode</th>
-<th>Total</th>
-  </tr>
-<div>
-</div>
-
-  </table>	
-	<script>
-	$(document).ready(function(){
-//var url  = "https://localhost:5001/rest/Invoices?$first=5"; //localhost URL
-var url  = "/data-api/rest/Invoices?$first=5"; //AZURE URL
-$.getJSON(url, function( data ) {
-	console.log(data);
-    var obj = data['value'];
-    for(var i=0;i<obj.length;i++)
-    {
-        var tr  ="<tr>"+
-                "<td>"+obj[i]["InvoiceId"]+"</td>"+
-                "<td>"+obj[i]["CustomerId"]+"</td>"+
-				"<td>"+obj[i]["InvoiceDate"]+"</td>"+
-                "<td>"+obj[i]["BillingCity"]+"</td>"+
-				"<td>"+obj[i]["BillingCountry"]+"</td>"+
-                "<td>"+obj[i]["BillingPostalCode"]+"</td>"+
-                "<td>"+obj[i]["Total"]+"</td></tr>";
-       $("#mytable").append(tr);
-    }
-});
-}); 
-	</script>
+  </div> 
+  <div class="float-container">
+    <div class="float-child green">
+      <h4>Invoice Details</h4>
+    <div class="card text-center m-5" >
+      <!--<div class="card-header">
+        <h4>Invoice Details</h4>
+      </div> -->
+      <canvas id="myChart"></canvas>
+    </div>
+    </div>
+    <div class="float-child red">
+      <h4>Add Invoice Details</h4>
+      <form name="myForm" action="" onsubmit="return addDetails(this)" method="post">
+        <div class="form-row">
+          <br>
+          <label for="CustomerId">Customer ID</label>
+          <input type="text" required class="input-text input-text-block w-20" id="CustomerId" name="CustomerId">
+      </div>
+        <div class="form-row">
+          <br>
+          <label for="BillingAddress">Billing Address</label>
+          <input type="text" required class="input-text input-text-block w-20" id="BillingAddress" name="BillingAddress">
+      </div>
+      <div class="form-row">
+        <br>
+          <label for="BillingCity">Billing City</label>
+          <input type="text" required class="input-text input-text-block w-20" id="BillingCity" name="BillingCity">
+      </div>
+      <div class="form-row">
+        <br>
+          <label for="BillingState">Billing State</label>
+          <input type="text" required class="input-text input-text-block w-20" id="BillingState" name="BillingState">
+      </div>
+      <div class="form-row">
+        <br>
+          <label for="BillingCountry">Billing Country</label>
+          <select name="BillingCountry" id="BillingCountry">
+            <option value="USA">USA</option>
+            <option value="Germany">Germany</option>
+            <option value="Canada">Canada</option>
+            <option value="India">India</option>
+          </select>
+      </div>
+      <div class="form-row">
+        <br>
+        <label for="BillingPostalCode">Billing Postal Code</label>
+        <input type="text" required class="input-text input-text-block w-20" id="BillingPostalCode" name="BillingPostalCode">
+    </div>
+    <div class="form-row">
+      <br>
+        <label for="Total">Amount</label>
+        <input type="text" required class="input-text input-text-block w-20" id="Total" name="Total">
+    </div>
+      <div class="form-row mx-auto">
+        <br>
+          <button type="submit" class="btn-submit" id="btnSubmit">
+          Submit
+          </button>
+      </div>
+      </form>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1"></script>
+  <script src="app.js"></script>
+  
 </body>
-
 
 </html>
