--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="float-child red">
       <h4>Add Invoice Details</h4>
-      <form name="myForm" action="/" onsubmit="return addDetails(this)" method="post">
+      <form name="myForm" action="#" onsubmit="return addDetails(this)" method="post">
         <div class="form-row">
           <br>
           <label for="CustomerId">Customer ID</label>
