--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
       <div class="form-row mx-auto">
         <br>
-          <input type="submit" value="submit" onclick="return addDetails()" />
+          <input type="submit" value="Submit" onclick="return addDetails()" />
       </div>
       </form>
     </div>
